fix(DateTime): fix gap on the time grid

--- a/src/components/DateTime/DateTimeTypeTime/DateTimeTypeTime.css
+++ b/src/components/DateTime/DateTimeTypeTime/DateTimeTypeTime.css
@@ -27,10 +27,7 @@
     display: flex;
     justify-content: center;
     height: calc(var(--date-time-cell-height) * 7);
-
-    & > *:not(:last-child) {
-      margin-right: var(--space-xs);
-    }
+    gap: var(--space-xs);
   }
 
   &-Label {
